# DetectionContour

./: .gitignore  CMakeLists.txt  Makefile  README.md  TP1_AnalyseImage.cbp  cmake_install.cmake  main.cpp
src/: Computations.cpp  Computations.h  imageDisplay.cpp
src/utils/: Matrix.cpp  Matrix.h  MatrixFilter.cpp  MatrixFilter.h
